--- a/styles.css
+++ b/styles.css
@@ -377,11 +377,23 @@ body:not(.dark) .section:nth-of-type(even) {
 }
 
 /* About Section */
-.about-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 4rem;
-    align-items: center;
+#about.section {
+    width: 100vw;
+    max-width: 100vw;
+    margin-left: calc(-1 * ((100vw - 100%) / 2));
+    margin-right: calc(-1 * ((100vw - 100%) / 2));
+    padding-left: 0;
+    padding-right: 0;
+}
+
+#about .about-grid {
+    max-width: none;
+    width: 100vw;
+    margin: 0;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    box-sizing: border-box;
+    gap: 2rem;
 }
 
 .about-image {
@@ -419,6 +431,7 @@ body:not(.dark) .section:nth-of-type(even) {
     color: #cccccc;
     margin-bottom: 2rem;
     line-height: 1.8;
+    text-align: justify;
 }
 
 .about-stats {
@@ -973,9 +986,9 @@ body:not(.dark) .stat-label {
         display: none;
     }
     
-    .about-grid {
-        grid-template-columns: 1fr;
-        gap: 2rem;
+    #about .about-grid {
+        padding-left: 2vw;
+        padding-right: 2vw;
     }
     
     .about-image img {
